2008-09-29 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flvdump.c: Added support for JPEG video frames.

2008-09-25 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c: Added invalid timestamp correction.

2008-09-23 Marc Noirot <marc.noirot@gmail.com>
	* flvdump.c: Fixed a bug causing the FLV parsing to lose track
	  of tags in the case of malformed metadata.

	* flvdump.c: Added invalid timestamp correction.

2008-09-21 Marc Noirot <marc.noirot@gmail.com>
	* flv.h, flv.c (flv_get_timestamp, flv_tag_set_timestamp): Added
	  the flv_get_timestamp macro and the flv_tag_set_timestamp function
	  to add support of 32-bit extended timestamps.

	* flvmeta.c, flvdump.c: Added support of 32-bit extended timestamps.

	* flv.h, flvdump.c: Added supports for all the audio and video types
	  found in the official specification.

	* src/Makefile.am, tests/Makefile.am: Added compilation of flv.c.

	* check_flvmeta.c: Moved test driver from check_amc.c to here.

	* check_flv.c: Added tests for FLV types and structures.

	* types.c (uint32_to_uint24_be): Big-endian platforms fix.

	* types.h: Various fixes from unit tests.

2008-06-12 Marc Noirot <marc.noirot@gmail.com>
	* amf.c (amf_string_read): Avoided allocating an empty buffer for
	  zero-length strings.

	* amf.c (amf_data_dump): Fixed a bug where zero-length strings would
	  cause fprintf to segfault flvdump in Linux.

2008-04-27 Marc Noirot <marc.noirot@gmail.com>
	* amf.h, amf.c (amf_str): Transformed the macro into a function for better
	  type safety and arguments sanity checks.

	* amf.c (amf_string_new): Avoided copying null strings into newly-created
	  AMF strings.

	* check_amf.c: Added tests for AMF numbers, booleans and strings.

	* configure.ac, tests/Makefile.am: Added tests if the machine has
	  check (http://check.sourceforge.net/) installed.

2008-03-24 Marc Noirot <marc.noirot@gmail.com>
	* amf.h, amf.c: Added support for the AMF NULL value type.
